fix shadow overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -372,6 +372,7 @@ footer {
   display: flex;
   gap: 22px;
   flex-wrap: nowrap;
+  padding-bottom: 20px;
 }
 
 .people__card {
